#VERSION 0.7.96#

*  added Peak_View_Helper_Redirect > manage url and controller http header + status code redirection

*  deprecated constants APP_LANG, and Peak_Lang class is no more loaded each time in Peak_Application

*  Peak_Router > fixed method setBaseUri() to use constant SVR_URL as base when $base_uri is empty

*  Peak_Boot > fixed an issue with include path of Peak_Core

*  Peak_Application > add exception when using internal login but application can't find the login controller

*  Peak_View_Render > fixed baseUrl(). remove unwanted double slash // in url

*  fixed Peak_View_Helper_Download problem with file name.


#VERSION 0.7.95#


*  added Zend_Mail and Zend_Mime, updated files to zend version 1.10.6

*  Peak_View_Render > fixed baseUrl(). Sanitize url and add boolean option $return

*  Peak_View > __call() can now load a new helper on the fly. 
               So you are no more obligated to call helper()->object_name before using object_name() method shorcut

*  Peak_View_Helpers > added method exists(). Check if helper file name is found or not.

*  Peak_Controller > added magic method __call(). We can now call a controller helper name like method name.
                     Note: this method won't load a helper and can't be used if helper 
                     name wasn't loaded before with method helper(). This restriction affect Peak_View::_call() too.

*  Peak_Controller_Helpers > added magic method __isset().

*  Peak_View_Helpers > added magic method __isset(). 

*  Peak_View > __call() will now in order check if method is a View_Engine method or Helper object name.
               if nothing is find, it simply silence error or, on DEV_MODE, will trigger E_NOTICE.
               We can now call a view helper name like method name too:
               Normal way -> $this->helper()->text->truncate('...')
               New way -> $this->text()->truncate('...')
